force-app/main/default/objects/Vehicle_Inventory__c/Vehicle_Inventory__c.object-meta.xml
<CustomObject>
    <description>Mock dealer-level stock count by model. Stand-in for a real DMS integration. Agent must NEVER claim live VIN-level lookup; only model+dealer count.</description>
    <label>Vehicle Inventory</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>