force-app/main/default/objects/Vehicle_Inventory__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The dealer location where this inventory is held.</description>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Electra Inventory</relationshipLabel>
    <relationshipName>Electra_Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>