force-app/main/default/objects/Vehicle_Inventory__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Timestamp of the last inventory update from the mock DMS.</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>