force-app/main/default/objects/Vehicle_Inventory__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of units available at this dealer for this model.</description>
    <label>Quantity Available</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>