force-app/main/default/objects/Vehicle_Inventory__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The vehicle model this inventory line represents.</description>
    <label>Vehicle Model</label>
    <referenceTo>Vehicle_Model__c</referenceTo>
    <relationshipLabel>Inventory Lines</relationshipLabel>
    <relationshipName>Inventory_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>