force-app/main/default/objects/Vehicle_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Dealer__c</columns>
    <columns>Quantity_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>